feat: requisito adicional desenvolvido em aula

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
         <item>Moderado</item>
         <item>Intenso</item>
     </string-array>
+    <string name="resumo_saude">Resumo da Saúde</string>
 </resources>
