feat: implementado tela de histórico

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
         <item>Intenso</item>
     </string-array>
     <string name="resumo_saude">Resumo da Saúde</string>
+    <string name="historico_saude">Histórico de Saúde</string>
 </resources>
